refactor ping handling into openapi
