# docs/api/voidengine/swagger.yaml
@@ -73,6 +73,19 @@ paths:
             $ref: '#/definitions/response.ApiResponse'
       tags:
       - ping
+    post:
+      consumes:
+      - application/json
+      description: Ping
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - ping
   /v1/traffic:
     get:
       consumes:
